# sbox

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  temp_SQL.sql
migrations/2022-01-29-120845_create_source/: up.sql
migrations/2022-02-02-175922_create_inputs_and_relate/: up.sql
migrations/2022-02-02-185652_create_tags/: up.sql
migrations/2022-02-02-185748_create_tag_input/: down.sql  up.sql
migrations/2022-02-02-190137_create_watcher/: up.sql
migrations/2022-02-03-053425_init/: down.sql  up.sql
migrations/2022-02-05-140710_create_initial/: down.sql  up.sql
src/: celery.rs  guards.rs  lib.rs  main.rs  models.rs  schema.rs  tasks.rs
src/OLD/api/: README.md  main.rs
src/OLD/api_script/: main.rs
src/OLD/api_script/models/: script.rs
src/OLD/db/: inputs.rs  mod.rs  tags.rs
src/OLD/models/: inputs.rs
src/api/: README.md  auth.rs  auth2.rs  data.rs  inputs.rs  main.rs  owners.rs  scripts.rs  tags.rs  test.rs  tokens.rs
src/api/db/: source.rs
src/api/routes/: source.rs
src/api_input/: db.rs  main.rs  models.rs  routes.rs
src/api_script/db/: script.rs
src/api_script/models/: script.rs
src/api_script/routes/: script.rs
src/api_source/: main.rs
src/api_source/db/: mod.rs  script.rs
src/api_source/models/: source.rs
src/api_source/routes/: source.rs
src/api_tag/: db.rs  main.rs  models.rs  routes.rs
src/api_tag/errors/: mod.rs
src/beat/: README.md  main.rs
src/db/: inputs.rs  mod.rs  owner.rs  owner_tag.rs  script.rs  script_tag.rs  source.rs  tag.rs  tags.rs  test.rs
src/errors/: mod.rs
src/middleware/: auth.rs
src/models/: common.rs  data.rs  inputs.rs  mod.rs  owner.rs  owner_tag.rs  script.rs  script_tag.rs  source.rs  tag.rs  tags.rs
src/routes/: mod.rs  sbox.rs  source.rs
src/rules/: tag.rs
src/utils/: mod.rs
src/worker/: README.md  main.rs
templates/: docs.html.tera
