[package]
name = "sbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel_migrations = "1.4.0"
serde = "1.0.127"
schemars = "0.7"
okapi = "0.6.0-alpha-1"
async-trait = "0.1"
dotenv = "0.15.0"
env_logger = "0.9"
anyhow = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.rocket_okapi]
version = "0.8.0-alpha-1"
features = ["swagger", "rapidoc"]

[dependencies.diesel]
version = "1.4.4"
features = ["postgres"]

[dependencies.tokio]
version = "0.2.x"
features = ["full"]

[dependencies.celery]
version = "0.3.1"

[dev-dependencies]
rmp-serde = "0.15"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde_yaml = "0.8"
serde-pickle = "1.1"
structopt = "0.3"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"
