[package]
name = "sbox"
version = "0.1.0"
edition = "2021"

# --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- ---
[dependencies]
diesel_migrations = "1.4.0"
schemars = "0.7"
okapi = "0.6.0-alpha-1"
anyhow = "1.0.53"
celery = "0.4.0-rcn.11"
log = "0.4"
env_logger = "0.9"
actix-web = "3"
r2d2 = "0.8.9"
futures = "0.3.19"
serde_json = "1.0.78"
serde = "1.0.136"
derive_more = "0.99.17"

[dependencies.rocket]
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.rocket_okapi]
version = "0.8.0-alpha-1"
features = ["swagger", "rapidoc"]

[dependencies.diesel]
version = "1.4.4"
features = ["postgres"]

[dependencies.tokio]
version = "1.0.0"
features = ["full"]

# --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- ---
[[bin]]
name = "api_script"
path = "src/api_script/main.rs"

[[bin]]
name = "api_tag"
path = "src/api_tag/main.rs"

[[bin]]
name = "api_input"
path = "src/api_input/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "beat"
path = "src/beat/main.rs"
