[package]
name = "sbox"
version = "0.1.0"
edition = "2021"

# --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- ---
[dependencies]
diesel_migrations = "1.4.0"
celery = "0.4.0-rcn.11"
actix-web = { version = "3", features=["openssl"] }
r2d2 = "0.8.9"
futures = "0.3.21"
serde_json = "1.0.78"
serde = "1.0.136"
derive_more = "0.99.17"
actix-web-httpauth = "0.5.1"
jsonwebtoken = "8.0.1"
awc = "2.0.3"
dotenv = "0.15.0"

# get rid of this dependency, use r2d2-postgres or similar instead (r2d2_postgres = "0.18.1")
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.4"
features = ["postgres"]

[dependencies.tokio]
version = "1.0.0"
features = ["full"]

# --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- ---
[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "beat"
path = "src/beat/main.rs"
